--- a/public/libreria/index.html
+++ b/public/libreria/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
-    <title>Libreria 16.11.10</title>
+  <title>Libreria P2</title>
+  <link rel="stylesheet" href="estilo.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-    <MAIN>
-        <h1>Hola Mundo Web</h1>
-        <h3>¡Hoy NO es viernes!</H3>
-    </MAIN>
-    
-    <script type="module">
-        import {init} from "./js/main.mjs"
-        init();
-    </script>
+  <main>
+    <h1>Hola Mundo Web</h1>
+    <h3>¡Hoy NO es viernes!</H3>
+  </main>
+  <script type="module">
+    import { init } from "./js/main.mjs";
+    init();
+  </script>
 </body>
+
 </html>
